{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 10,
  "lineage": "d6c31e2c-ebb2-e184-883d-01942f471e4e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ac592d6c981439e",
            "association_id": "eipassoc-071b35ee24cc613a6",
            "domain": "vpc",
            "id": "eipalloc-07ac592d6c981439e",
            "instance": "i-012336959d5d22272",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-01d8079c59dc6ce71",
            "private_dns": "ip-172-31-41-148.ap-south-1.compute.internal",
            "private_ip": "172.31.41.148",
            "public_dns": "ec2-65-2-7-212.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.7.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "zomato-prod-frontend"
            },
            "tags_all": {
              "Name": "zomato-prod-frontend"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.frontend",
            "aws_key_pair.my_key",
            "aws_security_group.frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02e94b011299ef128",
            "arn": "arn:aws:ec2:ap-south-1:450362641038:instance/i-012336959d5d22272",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012336959d5d22272",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "zomato-prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01d8079c59dc6ce71",
            "private_dns": "ip-172-31-41-148.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.41.148",
            "public_dns": "ec2-65-2-7-212.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.7.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-037860457c77db4a2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "zomato-prod-frontend"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c2ad87f93f6ff83",
            "tags": {
              "Name": "zomato-prod-frontend"
            },
            "tags_all": {
              "Name": "zomato-prod-frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0203e8e0e95d8a7a5"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_security_group.frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:450362641038:security-group/sg-045b8a630d5d81e82",
            "description": "zomato-prod-backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-045b8a630d5d81e82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "zomato-prod-backend",
            "name_prefix": "",
            "owner_id": "450362641038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zomato-prod-backend"
            },
            "tags_all": {
              "Name": "zomato-prod-backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-085592062931517f9"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:450362641038:security-group/sg-0203e8e0e95d8a7a5",
            "description": "zomato-prod-frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0203e8e0e95d8a7a5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "zomato-prod-frontend",
            "name_prefix": "",
            "owner_id": "450362641038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zomato-prod-frontend"
            },
            "tags_all": {
              "Name": "zomato-prod-frontend"
            },
            "timeouts": null,
            "vpc_id": "vpc-085592062931517f9"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}